<resources>
    <!-- activity_detail_restaurant.xml -->
    <string name="very_long_text_to_test">The Zinc very long text just to test</string>
    <string name="french_restaurant">French Restaurant</string>
    <string name="address">- 12 rue du Faubourg Poissonnière</string>

    <string name="call_action">CALL</string>
    <string name="like_action">LIKE</string>
    <string name="website_action">WEBSITE</string>

    <string name="restaurant_photo_desc">Restaurant photo</string>
    <string name="fab_workmate_desc">Button to indicate workmate wants to eat here</string>
    <string name="restaurant_star_desc">Restaurant rating</string>
    <string name="call_button_desc">Call the restaurant</string>
    <string name="like_button_desc">Mark restaurant as favorite</string>
    <string name="website_button_desc">Visit restaurant website</string>

    <!-- activity_main.xml = class to test -->
    <string name="btn_get_restaurants">Get Restaurants</string>
    <string name="btn_get_detail_restaurant">Get Detail Restaurant</string>
    <string name="btn_get_gps_position">Get GPS Position</string>
    <string name="btn_go_core_activity">Go CoreActivity</string>
    <string name="latitude_label">Latitude:</string>
    <string name="longitude_label">Longitude:</string>

    <!-- activity_settings -->
    <string name="enable_notifications">Active the notifications</string>
    <string name="notifications">Notifications</string>

    <!-- drawer_nav_header -->
    <string name="workmate_name">Name</string>
    <string name="workmate_email">Email</string>
    <string name="user_avatar_desc">User Avatar</string>

    <!-- fragment_list_restaurant -->
    <string name="waiting_message">Waiting</string>
    <string name="loading_spinner_desc">Loading</string>

    <!-- fragment_map -->
    <string name="gps_position_button">GPS position</string>

    <!-- item_restaurant.xml : RestaurantAdapter.java-->
    <string name="distance_text">Distance : %.2f m</string>
    <string name="participants_count">Participants : %d</string>
    <string name="item_restaurant_photo_desc">Restaurant photo</string>

    <!-- item_workmate.xml -->
    <string name="item_workmate_name">Workmate name</string>
    <string name="item_restaurant_name">Restaurant name</string>
    <string name="workmate_avatar_desc">Workmate avatar</string>

    <!-- list_item_user.xml -->
    <string name="item_list_workmate_avatar_desc">Workmate avatar on the list</string>
    <string name="item_list_workmate_name_desc">Workmate name on the list</string>

    <!-- bottom_navigation_menu.xml -->
    <string name="text_button_map_view">Map View</string>
    <string name="text_button_list_view">List View</string>
    <string name="text_button_workmates">Workmates</string>

    <!-- drawer_menu.xml -->
    <string name="drawer_your_lunch">Your lunch</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_logout">Logout</string>

    <!-- MyBroadcastReceiver.java -->
    <string name="notification_message">Remember to go to lunch at %1$s restaurant in: %2$s with %3$s</string>
    <string name="notification_no_workmates">alone</string>
    <string name="notification_title">LunchAlarm</string>

    <!-- CoreActivity.java -->
    <string name="user_name_unavailable">Name unavailable</string>
    <string name="user_email_unavailable">Email unavailable</string>
    <string name="no_restaurant_chosen">You have not chosen a restaurant yet</string>
    <string name="notification_channel_id">Go4Lunch</string>
    <string name="notification_channel_name">LunchAlarm</string>

    <!-- DetailRestaurantActivity.java -->
    <string name="toast_no_phone">no phone number availablee</string>
    <string name="toast_no_website">no website availablee</string>
    <string name="anonymous_user">Anonymous</string>

    <!-- ListRestaurantFragment.java -->
    <string name="permission_denied">Permission Denied</string>
    <string name="search_hint">Search a restaurant</string>

    <!-- WorkmateAdapter.java -->
    <string name="no_restaurant_chosen_adapter">no restaurant chosen</string>

    <string name="app_name">Go4Lunch</string>
    <string name="like_button_content_description">Like button</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="google_maps_key">${google_maps_api}</string>


</resources>
