<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:gravity="center_vertical">

    <!-- Image de l'avatar à gauche -->
    <ImageView
        android:id="@+id/workmate_avatar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_list_workmate_avatar"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/workmate_avatar_desc" />

    <!-- Conteneur vertical pour les textes -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Nom du workmate -->
        <TextView
            android:id="@+id/workmate_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_workmate_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <!-- Nom du restaurant -->
        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_restaurant_name"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>
</LinearLayout>

